load("//tools:defs.bzl", "builder")

licenses(["notice"])

builder(
    name = "builder",
    buildpacks = [
        "//cmd/config/entrypoint:entrypoint.tgz",
        "//cmd/utils/label:label.tgz",
    ],
    groups = {
        "go": [
            "//cmd/go/build:build.tgz",
            "//cmd/go/clear_source:clear_source.tgz",
            "//cmd/go/functions_framework:functions_framework.tgz",
            "//cmd/go/gopath:gopath.tgz",
            "//cmd/go/runtime:runtime.tgz",
        ],
    },
    image = "of/go",
    visibility = [
        "//builders/gcp/go/acceptance:__pkg__",
    ],
)
